; ModuleID = '/home/carl/AnghaBench/FFmpeg/tools/extr_ffhash.c_check.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tools/extr_ffhash.c_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIZE = common dso_local global i32 0, align 4
@O_RDONLY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"%s=OPEN-FAILED: %s:\00", align 1
@hash = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [17 x i8] c"+READ-FAILED: %s\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c" *%s\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@O_BINARY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %10 = load i32, i32* @SIZE, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %3, align 8
  %13 = alloca i32, i64 %11, align 16
  store i64 %11, i64* %4, align 8
  %14 = load i32, i32* @O_RDONLY, align 4
  store i32 %14, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %15 = load i8*, i8** %2, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %21

17:                                               ; preds = %1
  %18 = load i8*, i8** %2, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @open(i8* %18, i32 %19)
  store i32 %20, i32* %5, align 4
  br label %22

21:                                               ; preds = %1
  store i32 0, i32* %5, align 4
  br label %22

22:                                               ; preds = %21, %17
  %23 = load i32, i32* %5, align 4
  %24 = icmp eq i32 %23, -1
  br i1 %24, label %25, label %31

25:                                               ; preds = %22
  %26 = load i32, i32* @hash, align 4
  %27 = call i8* @av_hash_get_name(i32 %26)
  %28 = load i32, i32* @errno, align 4
  %29 = call i8* @strerror(i32 %28)
  %30 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %27, i8* %29)
  store i32 1, i32* %7, align 4
  br label %61

31:                                               ; preds = %22
  %32 = load i32, i32* @hash, align 4
  %33 = call i32 @av_hash_init(i32 %32)
  br label %34

34:                                               ; preds = %53, %31
  %35 = load i32, i32* %5, align 4
  %36 = load i32, i32* @SIZE, align 4
  %37 = call i32 @read(i32 %35, i32* %13, i32 %36)
  store i32 %37, i32* %8, align 4
  %38 = load i32, i32* %8, align 4
  %39 = icmp slt i32 %38, 0
  br i1 %39, label %40, label %48

40:                                               ; preds = %34
  %41 = load i32, i32* @errno, align 4
  store i32 %41, i32* %9, align 4
  %42 = load i32, i32* %5, align 4
  %43 = call i32 @close(i32 %42)
  %44 = call i32 (...) @finish()
  %45 = load i32, i32* %9, align 4
  %46 = call i8* @strerror(i32 %45)
  %47 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i8* %46)
  store i32 2, i32* %7, align 4
  br label %61

48:                                               ; preds = %34
  %49 = load i32, i32* %8, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %52, label %51

51:                                               ; preds = %48
  br label %57

52:                                               ; preds = %48
  br label %53

53:                                               ; preds = %52
  %54 = load i32, i32* @hash, align 4
  %55 = load i32, i32* %8, align 4
  %56 = call i32 @av_hash_update(i32 %54, i32* %13, i32 %55)
  br label %34

57:                                               ; preds = %51
  %58 = load i32, i32* %5, align 4
  %59 = call i32 @close(i32 %58)
  %60 = call i32 (...) @finish()
  br label %61

61:                                               ; preds = %57, %40, %25
  %62 = load i8*, i8** %2, align 8
  %63 = icmp ne i8* %62, null
  br i1 %63, label %64, label %67

64:                                               ; preds = %61
  %65 = load i8*, i8** %2, align 8
  %66 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8* %65)
  br label %67

67:                                               ; preds = %64, %61
  %68 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %69 = load i32, i32* %7, align 4
  %70 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %70)
  ret i32 %69
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @open(i8*, i32) #2

declare dso_local i32 @printf(i8*, ...) #2

declare dso_local i8* @av_hash_get_name(i32) #2

declare dso_local i8* @strerror(i32) #2

declare dso_local i32 @av_hash_init(i32) #2

declare dso_local i32 @read(i32, i32*, i32) #2

declare dso_local i32 @close(i32) #2

declare dso_local i32 @finish(...) #2

declare dso_local i32 @av_hash_update(i32, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
